--- a/_includes/_partials/footer.html
+++ b/_includes/_partials/footer.html
@@ -15,8 +15,8 @@
 
 <div class="theme-info">
   {{ __.footer.theme }} -
-  <a class="theme-link" href="https://github.com/simpleyyt/jekyll-theme-next">
-    NexT.{{ site.scheme }}
+  <a class="theme-link" href="www.beian.miit.gov.cn">
+    辽ICP备16005077号
   </a>
 </div>
 {% endif %}
