--- a/_includes/_partials/footer.html
+++ b/_includes/_partials/footer.html
@@ -4,6 +4,9 @@
   <span itemprop="copyrightYear">{{ current }}</span>
   <span class="with-love">
     <i class="fa fa-{{ site.authoricon }}"></i>
+    <i class="fa fa-{{ site.authoricon }}"><a class="theme-link" href="www.beian.miit.gov.cn">
+    辽ICP备16005077号
+  </a></i>
   </span>
   <span class="author" itemprop="copyrightHolder">{{ site.author }}</span>
 </div>
