--- a/_includes/_partials/footer.html
+++ b/_includes/_partials/footer.html
@@ -4,14 +4,15 @@
   <span itemprop="copyrightYear">{{ current }}</span>
   <span class="with-love">
     <i class="fa fa-{{ site.authoricon }}"></i>
-    <i class="fa fa-{{ site.authoricon }}"></i>
-  </span>
-  <span class="with-love">
-   <a class="theme-link" href="www.beian.miit.gov.cn">
-    辽ICP备16005077号
-  </a>
   </span>
   <span class="author" itemprop="copyrightHolder">{{ site.author }}</span>
+  
+  <span class="with-love">
+   <a class="theme-link" href="https://www.beian.miit.gov.cn">
+       【辽ICP备16005077号】
+  </a>
+  </span>
+  
 </div>
 
 {% if site.copyright %}
