--- a/_includes/_partials/footer.html
+++ b/_includes/_partials/footer.html
@@ -8,7 +8,7 @@
   <span class="author" itemprop="copyrightHolder">{{ site.author }}</span>
   
   <span class="with-love">
-   <a class="theme-link" href="https://www.beian.miit.gov.cn">
+   <a class="theme-link" href="http://www.beian.miit.gov.cn">
        【辽ICP备16005077号】
   </a>
   </span>
